--- a/home.html
+++ b/home.html
@@ -11,10 +11,97 @@
    <link rel="stylesheet" href="css/style.css">
    <!-- FAVICON -->
    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+   <!-- LINK TO GOOGLE FONTS -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Open+Sans:wght@300;500;700&display=swap"
+   rel="stylesheet">
 </head>
 <body>
    <!-- HEADER -->
-   <header></header>
+   <header class="flux">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-std">
+         <div class="container">
+            <a href="index.html" class="navbar-brand">
+               <img src="images/logo.png" alt="Logo du site atoutanim !">
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+               <i class="bi bi-list"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item dropdown">
+                     <a
+                     class="nav-link dropdown-toggle active"
+                        href="#"
+                        id="navbarDropdownNosactivites"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Nos activités
+                     </a>
+                     <ul class="dropdown-menu bg-darken" aria-labelledby="navbarDropdownNosactivites">
+                        <li><a class="dropdown-item" href="index.html">Accueil</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Jeux Picards</a></li>
+                        <li><a class="dropdown-item" href="#">Jeux d'orientation - rallyes</a></li>
+                        <li><a class="dropdown-item" href="#">Les phoques et la baie de Somme</a></li>
+                        <li><a class="dropdown-item" href="#">Marche nordique</a></li>
+                        <li><a class="dropdown-item" href="#">Meubles en carton</a></li>
+                        <li><a class="dropdown-item" href="#">Vélo</a></li>
+                     </ul>
+                  </li>
+                  
+                  <li class="nav-item dropdown">
+                     <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        id="navbarDropdownVous"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Vous
+                     </a>
+                     <ul class="dropdown-menu bg-darken" aria-labelledby="navbarDropdownVous">
+                        <li><a class="dropdown-item" href="#">Les individuels</a></li>
+                        <li><a class="dropdown-item" href="#">En famille</a></li>
+                        <li><a class="dropdown-item" href="#">En groupe ou séminaire</a></li>
+                        <li><a class="dropdown-item" href="#">Avec les enfants</a></li>
+                        <li><a class="dropdown-item" href="#">En couple</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Les séminaires</a></li>
+                        <li><a class="dropdown-item" href="#">Les groupes</a></li>
+                        <li><a class="dropdown-item" href="#">Les scolaires et centres de loisirs</a></li>
+                     </ul>
+                  </li>
+
+                  <li class="nav-item">
+                     <a href="#" class="nav-link">Nous</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="#" class="nav-link">Les sorties</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="calendrier.html" class="nav-link">Calendrier</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="#" class="nav-link">Se retrouver</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="#" class="nav-link">Des tarifs</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="#" class="nav-link">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="#" class="nav-link">Nos partenaires</a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </nav>
+   </header>
    <!-- FIN HEADER -->
    <!-- MAIN -->
    <main>
