Dévelppement de la partie principale : ASIDE + SECTION + css + bootstrap

--- a/home.html
+++ b/home.html
@@ -104,14 +104,70 @@
    </header>
    <!-- FIN HEADER -->
    <!-- MAIN -->
-   <main>
-      <h1>Loisirs nature Abbeville - Baie de Somme - Forêt de Crécy </h1>
+   <main class="flux activites">
+      <h1 class="activites__title">Loisirs nature Abbeville - Baie de Somme - Forêt de Crécy </h1>
+      <div class="row">
    <!-- ASIDE -->
-      <aside></aside>
+      <aside class="col-xl-3 col-sm-auto activites__menu h-100">
+         <a class="card__link" href="#">
+            <img class="card__avatar" src="images/mainaside01-01.jpg" alt="Marche nordique" >
+            <p class="card__title">Marche nordique</p>
+         </a>
+
+         <a class="card__link" href="#">
+            <img class="card__avatar" src="images/mainaside01-02.jpg" alt="Jeux traditionnels" >
+            <p class="card__title">Jeux traditionnels</p>
+         </a>
+
+         <a class="card__link" href="#">
+            <img class="card__avatar" src="images/mainaside02-01.jpg" alt="Séminaires - jeux de pistes" >
+            <p class="card__title">Séminaires - jeux de pistes</p>
+         </a>
+
+         <a class="card__link" href="#">
+            <img class="card__avatar" src="images/mainaside02-02.jpg" alt="Séminaires - vélo en Baie de Somme" >
+            <p class="card__title">Séminaires - vélo en Baie de Somme</p>
+         </a>
+
+         <a class="card__link" href="#">
+            <img class="card__avatar" src="images/mainaside03-01.jpg" alt="Jeux d'orientation, rallyes" >
+            <p class="card__title">Jeux d'orientation, rallyes</p>
+         </a>
+
+         <a class="card__link" href="#">
+            <img class="card__avatar" src="images/mainaside03-02.jpg" alt="Phoques de la Baie de Sommme" >
+            <p class="card__title">Phoques de la Baie de Sommme</p>
+         </a>
+
+         <a class="card__link" href="#">
+            <img class="card__avatar" src="images/mainaside04-01.jpg" alt="Chasses au trésor" >
+            <p class="card__title">Chasses au trésor</p>
+         </a>
+
+         <a class="card__link" href="#">
+            <img class="card__avatar" src="images/mainaside04-02.jpg" alt="Atelier Brico'recup" >
+            <p class="card__title">Atelier Brico'recup</p>
+         </a>
+      </aside>
    <!-- FIN ASIDE -->
    <!-- SECTION PRINCIPALE -->
-      <section></section>
+      <section class="col-xl-8 col-lg-6 col-sm-10">
+         <div class="activites__main">
+            <img src="images/nosactivites-01.png" class="activites__img" alt="Pêle-Mèle de nos activités">
+            
+            <h2 class="activites__title">Nos Activités</h2>
+            <p class="activites__description">Plaisirs ensemble et plaisirs au grand air !</p>
+            <p class="activites__description">Pour se divertir, un large choix d'animations et loisirs nature.</p> 
+            <p class="activites__description">Pour tous : individuels, familles, groupes, scolaires, centres de loisirs, séminaires.</p>
+            <p class="activites__description">Simplicité - Convivialité : les maîtres mots de toutes nos activités ! </p>
+         </div>
+         <div class="activites__contact">
+            <a href="mailto:atoutanim@gmail.com">atoutanim@gmail.com</a><br>
+            <a href="tel:+33681151593">06.81.15.15.93</a>
+         </div>
+      </section>
    <!-- FIN SECTION PRINCIPALE -->
+      </div>
    </main>
    <!-- FIN MAIN -->
    <!-- FOOTER -->
